control-plane/gateway07/gateway-api-0.7.1-custom/conformance/tests/httproute-rewrite-host.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rewrite-host
  namespace: gateway-conformance-infra
spec:
  hostnames:
    - "rewrite.example"
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /one
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: one.example.org
      backendRefs:
        - name: infra-backend-v1
          port: 8080
    - filters:
        - type: URLRewrite
          urlRewrite:
            hostname: example.org
      backendRefs:
        - name: infra-backend-v2
          port: 8080
